--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@
 }
 
 .first-box {
+    margin-top:50px;
     background: #FCFCFC;
     display:flex;
     flex-direction: column;
@@ -110,3 +111,17 @@
 }
 
 
+.promo-box{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: stretch;
+	align-content: center;
+}
+
+.promo{
+    width:30px;
+    height:50%;
+    height: 580px;
+}
